added friend search space and controllers